--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Phaser 3 Game</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
     <script src="role.js"></script>
+    <script src="food.js"></script>
     <script src="game.js"></script>
 </head>
 <body>
